# Research-Paper-Synthesis-Graph

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  research-paper-synthesis-graph.tex
.github/workflows/: ci.yml
configs/: baselines.yaml  judge.yaml  settings.yaml
eval/gold/: extraction_gold.jsonl  queries.jsonl  repro_gold.jsonl
scripts/: 01_fetch_corpus.py  02_parse_pdfs.py  03_chunk.py  04_extract.py  05_build_stores.py  06_run_eval.py
src/rpsg/: __init__.py  config.py  logging.py
src/rpsg/eval/: __init__.py  calibration.py  gold_schema.py  judge.py  metrics.py  runner.py
src/rpsg/extraction/: __init__.py  extractor.py  prompts.py  schema.py
src/rpsg/ingestion/: __init__.py  arxiv_client.py  chunking.py  pdf_parser.py  semantic_scholar.py
src/rpsg/retrieval/: __init__.py  baselines.py
src/rpsg/stores/: __init__.py  base.py  embedder.py  graph_store.py  vector_store.py
tests/: test_calibration.py  test_chunking.py  test_gold_schema.py  test_metrics.py
