[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpsg"
version = "0.1.0"
description = "Research-Paper-Synthesis-Graph: a typed Graph-RAG system with an eval-first harness"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RPSG" }]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "anthropic>=0.69",
    "httpx>=0.27",
    "tenacity>=8.2",           # retry/backoff for API + service calls
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.7",              # readable logs + progress
    "numpy>=1.26",
    "scipy>=1.12",             # spearman
    "scikit-learn>=1.4",       # quadratic-weighted kappa, regression
    "kuzu>=0.4",               # embedded graph db (Cypher; ports to Neo4j)
    "arxiv>=2.1",
    "pymupdf>=1.24",           # local PDF fallback when GROBID is unavailable
]

[project.optional-dependencies]
vector = [
    "sentence-transformers>=2.7",   # embeddings (SPECTER2 / general)
    "faiss-cpu>=1.8",               # local ANN index (Phase 1)
]
pgvector = [
    "psycopg[binary]>=3.1",         # Phase-1.5 portable vector store
    "pgvector>=0.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rpsg"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# UP042: keep the explicit `(str, Enum)` form. ruff's StrEnum rewrite is an *unsafe* fix
# (str() semantics differ), and the explicit base classes are intentional here.
ignore = ["UP042"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
files = ["src/rpsg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]